--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,4 +7,8 @@ phases:
     commands:
     - make compile-app
     - make test
-
+    - make deploy
+  post-build:
+    commands:
+    - make deploy
+    - make teardown
