--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,5 +7,5 @@ phases:
     commands:
     - make compile-app
     - make test
-    - make deploy
-    - make teardown
+    - make deploy APP_STACK_NAME = CODEBUILD_BUILD_ID
+    - make teardown APP_STACK_NAME = CODEBUILD_BUILD_ID
