--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,5 +12,5 @@ phases:
     commands:
     - make compile-app
     - make test
-    - make deploy APP_STACK_NAME=$STACK_NAME
+    - make deploy APP_STACK_NAME=${CODEBUILD_BUILD_ID//:}
     - make teardown APP_STACK_NAME=$STACK_NAME
