--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
     - make init
   pre_build:
     commands:
+    - apt-get update
     - apt-get install uuid-runtime
     - uuidgen -r
     - uuid=$(uuidgen -r)
