--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,9 +6,9 @@ phases:
     - make init
   pre_build:
     commands:
+    # Generate UUID and store it with a Prefix
     - apt-get update
     - apt-get install uuid-runtime
-    - uuidgen -r
     - uuid=$(uuidgen -r)
     - x=FeatureToggles-$uuid
   build:
@@ -16,4 +16,4 @@ phases:
     - make compile-app
     - make test
     - make deploy APP_STACK_NAME=$x
-    - make teardown APP_STACK_NAME=$x
+    #- make teardown APP_STACK_NAME=$x
