added permissions to put and clear params

--- a/sam/template.yml
+++ b/sam/template.yml
@@ -86,6 +86,8 @@ Resources:
                 Effect: Allow
                 Action:
                   - 'ssm:GetParameter*'
+                  - 'ssm:PutParameter*'
+                  - 'ssm:DeleteParameter*'
                 Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${TogglesPrefix}*'
 
       AssumeRolePolicyDocument:
