adding stack name

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,6 @@ phases:
     - make compile-app
     - make test-unit
     - make deploy APP_STACK_NAME=$x
-    - make test-integration
+    - make test-integration APP_STACK_NAME=$x
     finally:
     - make teardown APP_STACK_NAME=$x
