--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,5 +24,5 @@ phases:
 artifacts:
   files:
     - 'dist/packaged-template.yml'
-  name: feature_toggles-packaged-template-$(date +%Y-%m-%d_%H-%M-%S)
+  name: feature_toggles-$(date +%Y-%m-%d_%H-%M-%S)
   discard-paths: yes
