--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\boylejim\\.virtualenvs\\ServerlessFeatureToggles-oFbvqJqU\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\boylejim\\.virtualenvs\\ServerlessFeatureToggles-oFbvqJqU\\Scripts\\python.exe",
+    "aws.onDefaultRegionMissing": "add"
 }
