--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pytest = "*"
 mock = "*"
 pytest-mock = "*"
 aws-sam-cli = "*"
+pylint = "<2.0.0"
 
 [requires]
-python_version = "2.7"
+python_version = "3.6"
