--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
     - make compile-app
     - make test-unit
     - make deploy APP_STACK_NAME=$x
+    - echo STACK_NAME = "'"$x"'" > tests/integration_tests/test_constants.py
     - make test-integration APP_STACK_NAME=$x
     finally:
     - make teardown APP_STACK_NAME=$x
