--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,10 +14,9 @@ phases:
   build:
     commands:
     - make compile-app
-    - make test-unit
     - make deploy APP_STACK_NAME=$x
     - echo STACK_NAME = "'"$x"'" > tests/integration_tests/test_constants.py
-    - make test-integration APP_STACK_NAME=$x
+    - make test
     finally:
     - make teardown APP_STACK_NAME=$x
 
