--- a/sam/template.yml
+++ b/sam/template.yml
@@ -19,87 +19,45 @@ Resources:
     Properties:
       Tracing: Active
       CodeUri: ./src
-      MemorySize: 512
+      MemorySize: 128
       Environment:
         Variables:
           LOG_LEVEL: !Ref LogLevel
           PREFIX: !Ref TogglesPrefix
       Handler: handlers.load_feature_toggles
-      Role: !GetAtt LoadFeatureTogglesRole.Arn
+      Policies:
+        - AWSXrayWriteOnlyAccess
+        - AWSLambdaBasicExecutionRole
+        - Statement:
+            Effect: Allow
+            Action:
+              - ssm:GetParameter*
+            Resource: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${TogglesPrefix}/*
       Timeout: 60
       Runtime: python3.6
-
-  LoadFeatureTogglesRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess'
-        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
-      Policies:
-        - PolicyName: LoadFeatureTogglesRolePolicy0
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              -
-                Effect: Allow
-                Action:
-                  - 'ssm:GetParameter*'
-                Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${TogglesPrefix}*'
-
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Action:
-              - 'sts:AssumeRole'
-            Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
 
   UpdateFeatureToggles:
     Type: 'AWS::Serverless::Function'
     Properties:
       Tracing: Active
       CodeUri: ./src
-      MemorySize: 512
+      MemorySize: 128
       Environment:
         Variables:
           LOG_LEVEL: !Ref LogLevel          
           PREFIX: !Ref TogglesPrefix
       Handler: handlers.update_feature_toggles
-      Role: !GetAtt UpdateFeatureTogglesRole.Arn
+      Policies:
+        - AWSXrayWriteOnlyAccess
+        - AWSLambdaBasicExecutionRole
+        - Statement:
+            Effect: Allow
+            Action:
+              - ssm:GetParameter*
+              - ssm:DeleteParameter*
+            Resource: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${TogglesPrefix}/*
       Timeout: 60
       Runtime: python3.6
-      
-  UpdateFeatureTogglesRole:
-    Type: 'AWS::IAM::Role'
-    Properties:
-      ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess'
-        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
-      Policies:
-        - PolicyName: UpdateFeatureTogglesRolePolicy0
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              -
-                Effect: Allow
-                Action:
-                  - 'ssm:GetParameter*'
-                  - 'ssm:PutParameter*'
-                  - 'ssm:DeleteParameter*'
-                Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${TogglesPrefix}*'
-
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Action:
-              - 'sts:AssumeRole'
-            Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-
 
 Outputs:
   LoadFeatureTogglesFunctionName:
